[gd_scene load_steps=24 format=3 uid="uid://b2lwm3sm4cw5t"]

[ext_resource type="Script" uid="uid://cu43xrvle0i7t" path="res://Scenes/sfx_control.gd" id="1_f4uu4"]
[ext_resource type="AudioStream" uid="uid://cigl1kuiepkl8" path="res://Assets/SFX/sounds/C-Jump.mp3" id="2_hdnws"]
[ext_resource type="AudioStream" uid="uid://berjqmge0h6fv" path="res://Assets/SFX/sounds/C-Jump0.mp3" id="3_7twoe"]
[ext_resource type="AudioStream" uid="uid://qmkwmwh3qobi" path="res://Assets/SFX/sounds/B-Jump.mp3" id="4_8nyne"]
[ext_resource type="AudioStream" uid="uid://c8k5fed52mujm" path="res://Assets/SFX/sounds/B-Punch.mp3" id="5_68tuw"]
[ext_resource type="AudioStream" uid="uid://lcxei868hg2m" path="res://Assets/SFX/sounds/B-BigHurt.mp3" id="6_px57j"]
[ext_resource type="AudioStream" uid="uid://cwqiiop1eyubl" path="res://Assets/SFX/sounds/B-SmallHurt.mp3" id="7_q5dfi"]
[ext_resource type="AudioStream" uid="uid://p05ck4wmgkq" path="res://Assets/SFX/sounds/C-BigHurt.mp3" id="8_rni1b"]
[ext_resource type="AudioStream" uid="uid://bctc3x03llstd" path="res://Assets/SFX/sounds/C-SmallHurt.mp3" id="9_7sy4l"]
[ext_resource type="AudioStream" uid="uid://gjytvdef7xpd" path="res://Assets/SFX/blipSelect (1).wav" id="9_bjkat"]
[ext_resource type="AudioStream" uid="uid://um0wvdrnygax" path="res://Assets/SFX/blipSelect.wav" id="10_nnfwa"]
[ext_resource type="AudioStream" uid="uid://egdraw2jc33e" path="res://Assets/SFX/sounds/T-Block.mp3" id="12_8nyne"]
[ext_resource type="AudioStream" uid="uid://k172wqb7u7wg" path="res://Assets/SFX/sounds/B-Kick.mp3" id="15_piebn"]
[ext_resource type="AudioStream" uid="uid://de3kobddqya23" path="res://Assets/SFX/sounds/C-Kick.mp3" id="16_1b3t6"]
[ext_resource type="AudioStream" uid="uid://cwe0r8omh7e6v" path="res://Assets/SFX/sounds/T-KickAir.mp3" id="16_68tuw"]
[ext_resource type="AudioStream" uid="uid://csrvg570dlqp2" path="res://Assets/SFX/sounds/B-Death.mp3" id="17_luhre"]
[ext_resource type="AudioStream" uid="uid://q6oxt4ose2k4" path="res://Assets/SFX/sounds/T-PunchAir.mp3" id="17_px57j"]
[ext_resource type="AudioStream" uid="uid://be0581c3idtsl" path="res://Assets/SFX/sounds/T-Punch.mp3" id="18_q5dfi"]
[ext_resource type="AudioStream" uid="uid://n0tmmns2mki8" path="res://Assets/SFX/sounds/T-Kick.mp3" id="19_rni1b"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qbjw7"]
streams_count = 3
stream_0/stream = ExtResource("2_hdnws")
stream_1/stream = ExtResource("3_7twoe")
stream_2/stream = ExtResource("4_8nyne")
stream_2/weight = 0.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hdnws"]
streams_count = 4
stream_0/stream = ExtResource("6_px57j")
stream_1/stream = ExtResource("7_q5dfi")
stream_2/stream = ExtResource("8_rni1b")
stream_3/stream = ExtResource("9_7sy4l")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_f4uu4"]
streams_count = 2
stream_0/stream = ExtResource("9_bjkat")
stream_1/stream = ExtResource("10_nnfwa")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_q06vj"]
streams_count = 2
stream_0/stream = ExtResource("15_piebn")
stream_1/stream = ExtResource("16_1b3t6")

[node name="SfxManager" type="Node2D"]
script = ExtResource("1_f4uu4")

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_qbjw7")
volume_db = 5.0

[node name="KickVoice" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_1b3t6")
volume_db = 5.0

[node name="PunchVoice" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_68tuw")
volume_db = 5.0

[node name="HitSounds" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_hdnws")
volume_db = 5.0

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_f4uu4")

[node name="Block" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_8nyne")
volume_db = 5.0

[node name="Kick" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_q06vj")
volume_db = 5.0

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_luhre")
volume_db = 10.0

[node name="KickMiss" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_68tuw")
volume_db = 10.0

[node name="PunchMiss" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_px57j")
volume_db = 10.0

[node name="PunchHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_q5dfi")
volume_db = 10.0

[node name="KickHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_rni1b")
volume_db = 10.0
