extends Node2D

func playHit():
	if not false:
		$HitSounds.play()
	
func playMiss():
	if not false:
		$Miss.play()
	
func playJump():
	if not false:
		$Jump.play()
		
func playClick():
	if not false:
		$Click.play()

func playBlock():
	if not false:
		$Block.play()
		
func playDeath():
	if not false:
		$Death.play()
		
func playKick():
	if not false:
		$Kick.play()
		
func playKickMiss():
	if not false:
		$KickMiss.play()

func playPunchMiss():
	if not false:
		$PunchMiss.play()
		
func playKickHit():
	if not false:
		$KickHit.play()

func playPunchHit():
	if not false:
		$PunchHit.play()
